[package]
name = "watfaq-dns"
description = "A good DNS server"
license = "MIT"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1", features=["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"


rustls = { version  = "0.23", default-features = false, features=["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

hickory-client = "0.25.0-alpha.2"
hickory-resolver = "0.25.0-alpha.2"
hickory-server = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-h3"] }
hickory-proto = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-h3"]}



[dev-dependencies]
mockall = "0.13.0"